[gd_scene load_steps=6 format=3 uid="uid://doq2wpwlv2jai"]

[ext_resource type="Script" path="res://scenes/options/OptionSubcategory.gd" id="1_0rbk2"]
[ext_resource type="FontFile" uid="uid://bwarup1ao013v" path="res://assets/fonts/SourceCodePro-VariableFont_wght.ttf" id="2_6413v"]
[ext_resource type="Texture2D" uid="uid://b4fsemespyxq3" path="res://assets/images/checkbox_disabled_checked.png" id="3_q2spd"]
[ext_resource type="Texture2D" uid="uid://f3k5yjpe15ky" path="res://assets/images/checkbox_disabled_unchecked.png" id="4_4drrk"]

[sub_resource type="Theme" id="Theme_3ngn2"]
CheckBox/icons/checked_disabled = ExtResource("3_q2spd")
CheckBox/icons/unchecked_disabled = ExtResource("4_4drrk")

[node name="OptionCategory" type="Control"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 44.0
size_flags_vertical = 3
script = ExtResource("1_0rbk2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.86
anchor_bottom = 0.909
offset_bottom = 0.00399828
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/HBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="CenterContainer/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_6413v")
theme_override_font_sizes/font_size = 12
text = "category"
horizontal_alignment = 1

[node name="HBox2" type="HBoxContainer" parent="CenterContainer/HBox/VBox"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="CenterContainer/HBox/VBox/HBox2"]
layout_mode = 2
theme = SubResource("Theme_3ngn2")
button_pressed = true

[node name="Label2" type="Label" parent="CenterContainer/HBox/VBox/HBox2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_6413v")
theme_override_font_sizes/font_size = 12
text = "(0)"
horizontal_alignment = 1

[connection signal="toggled" from="CenterContainer/HBox/VBox/HBox2/CheckBox" to="." method="_on_check_box_toggled"]
